test/sema/example_15.colgm
func main() {
    print()

    var bar = [1, 2, 3]
    var foo = print(bar)
}